[FIX] Keep Attractor Visible On Mobile

--- a/assets/css/extended/research-site.css
+++ b/assets/css/extended/research-site.css
@@ -545,7 +545,7 @@ a {
 
     .attractor-canvas {
         top: 142px;
-        right: -138px;
+        right: -64px;
         width: 320px;
         height: 320px;
         opacity: 0.32;
@@ -589,7 +589,7 @@ a {
 
     .attractor-canvas {
         top: 132px;
-        right: -150px;
+        right: -74px;
         width: 300px;
         height: 300px;
         opacity: 0.28;
